--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -114,7 +114,8 @@
 }
 @media (max-width:700px) {
   .profile-pic {
-    margin-top:10px !important;
+    // margin-top:10px !important;
+    margin-top:0px !important;
   }
 }
 .after-profile {
